--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.1",
+    "@types/http-errors": "^1.6.2",
+    "@types/morgan": "^1.7.37",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -13,5 +17,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "typescript": "^3.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.3"
   }
 }
