--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -19,6 +20,11 @@
     "typescript": "^3.6.2"
   },
   "devDependencies": {
-    "@types/node": "^12.7.3"
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.3",
+    "@types/supertest": "^2.0.8",
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2"
   }
 }
