--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/http-errors": "^1.6.2",
+    "@types/mongoose": "^5.5.16",
     "@types/morgan": "^1.7.37",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
     "typescript": "^3.6.2"
   },
