--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/http-errors": "^1.6.2",
     "@types/mongoose": "^5.5.16",
     "@types/morgan": "^1.7.37",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
