--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prestart": "tsc",
     "start": "node ./bin/www",
     "test": "jest",
     "dev": "nodemon ./bin/www"
