--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^14.3.1",
     "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
     "typescript": "^3.6.2"
