--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@types/joi": "^14.3.3",
     "@types/node": "^12.7.3",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
