--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "tsc",
     "start": "node ./bin/www",
-    "test": "jest",
+    "test": "jest --runInBand",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
