--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
     "typescript": "^3.6.2"
