--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/http-errors": "^1.6.2",
     "@types/mongoose": "^5.5.16",
     "@types/morgan": "^1.7.37",
+    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
@@ -28,8 +29,10 @@
     "typescript": "^3.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^24.0.18",
     "@types/joi": "^14.3.3",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/node": "^12.7.3",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
