--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
+    "express-limiter": "^1.6.1",
+    "express-rate-limit": "^5.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
+    "redis": "^2.8.0",
     "typescript": "^3.6.2"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.3",
     "@types/node": "^12.7.3",
+    "@types/redis": "^2.8.13",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.1",
