--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,9 @@ services:
       - redis
     ports:
       - "3000:3000"
+    depends_on:
+      - redis
+      - mongo
   redis:
     container_name: redis
     image: "redis:alpine"
